# grendel

./: .actrc  .air.toml  .gitignore  .gitmodules  .goreleaser.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  NOTICE  README.md  REUSE.toml  go.mod  go.sum  grendel.toml.sample  main.go  openapi.json  sqlc.yaml
.zed/: settings.json
api/: README.md  bootimg.go  bootimg_test.go  config.yaml  const.go  dhcp.go  handler.go  handler_test.go  host.go  host_test.go  logger.go  logging.go  netboot.go  openapi.json  pxe.go  server.go  template.go  tftp.go  validator.go  version.go
bmc/: bmc.go  catalog.go  client.go  error.go  funcs.go  ipmi.go  ipmi_test.go  job.go  jobs.go  logger.go  redfish.go  redfish_test.go  runner.go
client/: README.md  api_host.go  api_image.go  client.go  const.go
cmd/: allservices.go  api.go  bmc_status.go  certs.go  dhcp.go  discover.go  dns.go  host.go  host_show.go  netboot.go  power.go  provision.go  root.go  serve.go  tftp.go
configs/: grendel.toml.sample
dhcp/: booting.go  discovery.go  pxe.go  server.go  snooper.go  static.go
dns/: handler.go  server.go  util.go
docs/: README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/pages/: api.md  background.md  https.md  index.md  install.md  intro.md  production.md  publications.md  quickstart.md
docs/pages/advanced/: https.md  ipxe.md  kslive.md  router.md
docs/pages/bootImages/: boot images.md  templates.md
firmware/: Makefile  boot.ipxe  firmware.go
frontend/: .prettierrc  api.go  base.css  client.go  error.go  fragments.go  frontend.md  funcs.go  handler.go  jobs.go  (+8 more)
(+647 files in other folders)
