[project]
name = "grendel"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.11",
    "mkdocs-render-swagger-plugin>=0.1.2",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "pygments",
    "pymdown-extensions",
]
